cartoon style update plus profile visibility fix

--- a/public/css/homeCard.css
+++ b/public/css/homeCard.css
@@ -19,6 +19,7 @@
   margin-bottom: 2em;
   border-radius: 0.5em;    
   box-shadow: 0.4em 0.4em;
+  border: 0.125em solid #000;
   background: var(--background);
 
   max-width: 60em;
